css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
/* GLOBAL STUFF */
body{
    background-image: black;
    background-size:cover;
    color: white;
    font-family: 'Inter', sans-serif;
}

hr{
    background-color: white;
}

body > .container-fluid > .row{
    height: 100vh;
}

a, a:hover{
    color: inherit;
    text-decoration: inherit;
}

.right{
    overflow-y:scroll;
}

.left, .right {
    border-radius: 15px;
}

/* ************ */

.left, .right{
    height: 85vh;
    background-color: rgba(0, 0, 0, 0.7); /* transparent */
}

.content {
    padding: 5vh;
    font-size: 20px;
}

.content img{
    width: 100%;
    margin: 3vh;

    display: block;
    margin-left: auto;
    margin-right: auto;
}

.left li {
    padding: 2vh;
}

.left ul{
    list-style: none;
    font-size:25px;

    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    /* for wrapping starting from middle*/
    justify-content: center;

    text-align: center;
    padding: 0px;
    margin-top: 10vh;
}

.nav-heading {
    text-align: center;
    /* font-family: 'Press Start 2P', cursive; */
    margin: 4vh;
    font-size: 50px;
}

/* ACTIVE nav buttons */
.nav-btn.active{
    background-color: white;
    color: black;
    border-radius: 10px;
}

/* NEXT & Download button */
.content .butn{
    border-color: white;
    border-style:solid;
    padding: 1vh;
}

/* Socials Icons */
ion-icon {
    font-size: 60px;
    margin: 1vw;
}

.first-content{
    margin-top: 15vh;
    font-size: 30px;
}

.first-content h1{
    font-size: 128px;
}

.content img {
    width: 100%;
    margin: 3vh;

    display: block;
    margin-left: auto;
    margin-right: auto;
}


/* MEDIUM SCREEN */
@media only screen and (max-width: 1700px){
    .nav-heading {
        margin: 2vh;
        font-size: 30px;
    }

    .left ul{
        font-size: 20px;
    }

    .content{
        font-size: 15px;
    }
    
    .first-content h1{
        font-size: 100px;
    }

    .first-content {
        font-size: 25px;
    }
}

/* PHONE SCREEN */
@media only screen and (max-width: 768px){
    .left{
        height: auto;
        max-height: 45vh;
        margin-top: 0px !important;
        border-radius: 0px;
        border-bottom-left-radius: 15px;
        border-bottom-right-radius: 15px;
    }

    .left ul{
        flex-direction: row;
        font-size: 15px;
        margin-top: 5vh;
    }

    .nav-heading {
        margin: 1vh;
        font-size: 20x;
    }

    .right{
        min-height: 100vh;
        height: auto;
        margin-top: 10vh !important;
    }

    .content {
        padding: 1vh;
        padding-top: 4vh;
    }  
}

